--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         </ul>
         <ul class="portfolio-list portfolio-wrap">
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
             <div class="card-overlay-box"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
             </div>
               <div class="portfolio-box">
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
             <div class="card-overlay-box"><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
               alt="Постер New Orlean vs Golden Star" width="370">
             <div class="portfolio-box">
@@ -69,7 +69,7 @@
           </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
             <img class="portfolio-img" src="./images/seafood-restaurant.jpg"
               alt="Ресторан Seafood" width="370" height="294">
             <div class="portfolio-box">
@@ -79,7 +79,7 @@
           </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
               <img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime"
               width="370" height="294">
             <div class="portfolio-box">
@@ -88,7 +88,7 @@
             </div>
           </a>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
             <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
             <div class="portfolio-box">
               <p class="portfolio-description">Проєкт Boxes</p>
@@ -97,7 +97,7 @@
           </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
               <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg"
               alt="Inspiration has no Borders" width="370" height="294">
             <div class="portfolio-box">
@@ -107,7 +107,7 @@
           </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
               <img class="portfolio-img" src="./images/edition-limited-edition.jpg"
               alt="Видання Limited Edition" width="370" height="294">
             <div class="portfolio-box">
@@ -117,7 +117,7 @@
           </a>
           </li>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
               <img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370"
               height="294">
               <a href="#">
@@ -127,7 +127,7 @@
             </div>
           </a>
           <li class="portfolio-item">
-            <a href="#">
+            <a class="item-link" href="#">
              <img class="portfolio-img" src="./images/growing-business.jpg"
               alt="Growing Business" width="370" height="294">
             <div class="portfolio-box">
